lab1-interaktywny_wiersz_polecen.txt
andrzej@Andrzejs-MacBook-Pro ~ % python3
Python 3.6.6 (v3.6.6:4cf1f54eb7, Jun 26 2018, 19:50:54) 
[GCC 4.2.1 Compatible Apple LLVM 6.0 (clang-600.0.57)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 3
3
>>> 3 + 2
5
>>> 3 - 2
1
>>> 3 * 2
6
>>> 2 + 2 * 2
6
>>> 2 + (2 * 2)
6
>>> (2 + 2) * 2
8
>>> 3 / 2
1.5
>>> 3.14 * 2
6.28
>>> number = 4
>>> number * 2
8
>>> number
4
>>> number = number * 2
>>> number
8
>>> number1 = 3
>>> number2 = 4
>>> number3 = number1 * number 2
  File "<stdin>", line 1
    number3 = number1 * number 2
                               ^
SyntaxError: invalid syntax
>>> number3 = number1 * number2
>>> number3
12
>>> 1number = 3
  File "<stdin>", line 1
    1number = 3
          ^
SyntaxError: invalid syntax
>>> my number = 3
  File "<stdin>", line 1
    my number = 3
            ^
SyntaxError: invalid syntax
>>> my_number = 3
>>> 
>>> phrase = "Hello world"
>>> phrase = 'Hello world'
>>> phrase = 'Hello world'
>>> phrase = 'Hello\nworld'
>>> phrase
'Hello\nworld'
>>> print(phrase)
Hello
world
>>> phrase = 'Hello\tworld'
>>> print(phrase)
Hello   world
>>> "Hello" + "World"
'HelloWorld'
>>> "Hello " + "World"
'Hello World'
>>> x1 = "hi"
>>> x2 = "Andrzej"
>>> x1 + x2
'hiAndrzej'
>>> 
>>> "Hello" + 2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: must be str, not int
>>> "Hello" * 10
'HelloHelloHelloHelloHelloHelloHelloHelloHelloHello'
>>> phrase
'Hello\tworld'
>>> phrase = "Hello World!"
>>> phrase[0]
'H'
>>> phrase[1]
'e'
>>> phrase[4]
'o'
>>> phrase[-1]
'!'
>>> phrase[-2]
'd'
>>> phrase[0:3]
'Hel'
>>> phrase[2:10]
'llo Worl'
>>> phrase[0:11:2]
'HloWrd'
>>> phrase[::2]
'HloWrd'
>>> phrase[::-1]
'!dlroW olleH'
>>> len(phrase)
12
>>> len(phrase[0:5])
5
>>> phrase.upper()
'HELLO WORLD!'
>>> phrase.lower()
'hello world!'
>>> phrase.count('o')
2
>>> phrase = "       Hello world!       "
>>> phrase.strip()
'Hello world!'
>>> phrase.rstrip()
'       Hello world!'
>>> phrase.lstrip()
'Hello world!       '
>>> phrase = "hello world!"
>>> phrase.rstrip("!")
'hello world'
>>> phrase = "       Hello world!       "
>>> phrase.strip().rstrip('!').upper()
'HELLO WORLD'
>>> phrase
'       Hello world!       '
>>> phrase = phrase.strip().rstrip('!').upper()
>>> phrase
'HELLO WORLD'
>>> phrase
'HELLO WORLD'
>>> x = 4
>>> phrase + x
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: must be str, not int
>>> phrase + str(x)
'HELLO WORLD4'
>>> int('4')
4
>>> int('4') + 5
9
>>> float('3.23')
3.23
>>> 
